sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: not found: value conditon_limite
    if (position_gnome + 2 > n) {conditon_limite=true}
                                 ^